--- a/src/AppBundle/Resources/translations/messages.ru.xlf
+++ b/src/AppBundle/Resources/translations/messages.ru.xlf
@@ -7,7 +7,7 @@
     <body>
       <trans-unit id="dpAPG.0" resname="Back">
         <source>Back</source>
-        <target>Назад</target>
+        <target>Оборот</target>
       </trans-unit>
       <trans-unit id="PzQb_na" resname="Your query didn't match any card.">
         <source>Your query didn't match any card.</source>
