--- a/src/AppBundle/Resources/translations/messages.ru.xlf
+++ b/src/AppBundle/Resources/translations/messages.ru.xlf
@@ -197,6 +197,22 @@
         <source>Make your decks public</source>
         <target>Открыть публичный доступ к колодам</target>
       </trans-unit>
+      <trans-unit id="_nSW5K6" resname="collection">
+        <source>collection</source>
+        <target>__collection</target>
+      </trans-unit>
+      <trans-unit id="odAmGiq" resname="Deckbuilder and Card Database for the Arkham Horror LCG">
+        <source>Deckbuilder and Card Database for the Arkham Horror LCG</source>
+        <target>__Deckbuilder and Card Database for the Arkham Horror LCG</target>
+      </trans-unit>
+      <trans-unit id="r_ttCrp" resname="Popular Decks">
+        <source>Popular Decks</source>
+        <target>__Popular Decks</target>
+      </trans-unit>
+      <trans-unit id="JyS6ppo" resname="Recent Decks">
+        <source>Recent Decks</source>
+        <target>__Recent Decks</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
