--- a/src/AppBundle/Resources/translations/messages.de.xlf
+++ b/src/AppBundle/Resources/translations/messages.de.xlf
@@ -179,7 +179,7 @@
       </trans-unit>
       <trans-unit id="f1b7869e146d6dfec49f5eeb69c6de7d" resname="Deck Building">
         <source>Deck Building</source>
-        <target>__Deck Building</target>
+        <target>Deck Building</target>
       </trans-unit>
     </body>
   </file>
