--- a/src/AppBundle/Resources/translations/messages.ko.xlf
+++ b/src/AppBundle/Resources/translations/messages.ko.xlf
@@ -131,7 +131,7 @@
       </trans-unit>
       <trans-unit id="FcxQY4_" resname="One published decklist">
         <source>One published decklist</source>
-        <target>One 공개한 덱</target>
+        <target>1 공개한 덱</target>
       </trans-unit>
       <trans-unit id="6a8vzwy" resname="published reviews">
         <source>published reviews</source>
@@ -139,7 +139,7 @@
       </trans-unit>
       <trans-unit id="QoVVZRb" resname="One published reviews">
         <source>One published reviews</source>
-        <target>One 공개한 리뷰</target>
+        <target>1 공개한 리뷰</target>
       </trans-unit>
       <trans-unit id="0R5ueJn" resname="Reputation">
         <source>Reputation</source>
@@ -183,27 +183,27 @@
       </trans-unit>
       <trans-unit id="LptaDE5" resname="Victory">
         <source>Victory</source>
-        <target>Victory</target>
+        <target>승점</target>
       </trans-unit>
       <trans-unit id="9nMh2sC" resname="Vengeance">
         <source>Vengeance</source>
-        <target>Vengeance</target>
+        <target>복수</target>
       </trans-unit>
       <trans-unit id="_nSW5K6" resname="collection">
         <source>collection</source>
-        <target>collection</target>
+        <target>보유게임</target>
       </trans-unit>
       <trans-unit id="odAmGiq" resname="Deckbuilder and Card Database for the Arkham Horror LCG">
         <source>Deckbuilder and Card Database for the Arkham Horror LCG</source>
-        <target>Deckbuilder and Card Database for the Arkham Horror LCG</target>
+        <target>아컴호러 카드 게임을 위한 덱 빌더 및 카드 데이터베이스</target>
       </trans-unit>
       <trans-unit id="r_ttCrp" resname="Popular Decks">
         <source>Popular Decks</source>
-        <target>Popular Decks</target>
+        <target>인기있는 덱 목록</target>
       </trans-unit>
       <trans-unit id="JyS6ppo" resname="Recent Decks">
         <source>Recent Decks</source>
-        <target>Recent Decks</target>
+        <target>최근 덱 목록</target>
       </trans-unit>
     </body>
   </file>
