--- a/src/AppBundle/Resources/translations/messages.fr.xlf
+++ b/src/AppBundle/Resources/translations/messages.fr.xlf
@@ -7,7 +7,7 @@
     <body>
       <trans-unit id="a54df7f0b810414467735acc4f3ca4f9" resname="My Decks">
         <source>My Decks</source>
-        <target>My Decks</target>
+        <target>Mes Decks</target>
       </trans-unit>
       <trans-unit id="41bee85f0a581e16440caf695024e618" resname="My Teams">
         <source>My Teams</source>
@@ -19,7 +19,7 @@
       </trans-unit>
       <trans-unit id="cd81f9f55969c822377f076017bb3484" resname="Cards">
         <source>Cards</source>
-        <target>Cards</target>
+        <target>Cartes</target>
       </trans-unit>
       <trans-unit id="34e80a799d144cfe4af46815e103f017" resname="Reviews">
         <source>Reviews</source>
@@ -27,7 +27,7 @@
       </trans-unit>
       <trans-unit id="1f4da964f8eab62e96e8cfe406e44364" resname="Rules">
         <source>Rules</source>
-        <target>Rules</target>
+        <target>Règles</target>
       </trans-unit>
       <trans-unit id="483a5da192f46e3cfe8391d3ef234fc4" resname="FAQs">
         <source>FAQs</source>
@@ -35,7 +35,7 @@
       </trans-unit>
       <trans-unit id="8f7f4c1ce7a4f933663d10543562b096" resname="About">
         <source>About</source>
-        <target>About</target>
+        <target>À propos</target>
       </trans-unit>
       <trans-unit id="db974238714ca8de634a7ce1d083a14f" resname="API">
         <source>API</source>
@@ -43,7 +43,7 @@
       </trans-unit>
       <trans-unit id="20b4f77bd00b4f63a49ec8e08f3bf6a6" resname="Cost">
         <source>Cost</source>
-        <target>Cost</target>
+        <target>Coût</target>
       </trans-unit>
       <trans-unit id="9b57db6e9d84ba5f537ce97b13079736" resname="XP">
         <source>XP</source>
@@ -51,55 +51,55 @@
       </trans-unit>
       <trans-unit id="5b388583a8c29ad05de31c7b1ca38146" resname="Willpower">
         <source>Willpower</source>
-        <target>Willpower</target>
+        <target>Volonté</target>
       </trans-unit>
       <trans-unit id="591a90c34f2dc753830b9bd6b5c6c815" resname="Intellect">
         <source>Intellect</source>
-        <target>Intellect</target>
+        <target>Intelligence</target>
       </trans-unit>
       <trans-unit id="30ad1054cf7ad7636a26844a6f782e1f" resname="Combat">
         <source>Combat</source>
-        <target>Combat</target>
+        <target>Lutte</target>
       </trans-unit>
       <trans-unit id="241bb470b0110efc8b5609f7311b0bb1" resname="Agility">
         <source>Agility</source>
-        <target>Agility</target>
+        <target>Agilité</target>
       </trans-unit>
       <trans-unit id="605669cab962bf944d99ce89cf9e58d9" resname="Health">
         <source>Health</source>
-        <target>Health</target>
+        <target>Vie</target>
       </trans-unit>
       <trans-unit id="ad34a9d5d87691c743dc42cbc5e8b783" resname="Sanity">
         <source>Sanity</source>
-        <target>Sanity</target>
+        <target>Santé Mentale</target>
       </trans-unit>
       <trans-unit id="c8b01a3184580b42a0bfbc05d2dab784" resname="Fight">
         <source>Fight</source>
-        <target>Fight</target>
+        <target>Combattre</target>
       </trans-unit>
       <trans-unit id="fcebb8bec493a6678a2758580bee43f9" resname="Evade">
         <source>Evade</source>
-        <target>Evade</target>
+        <target>Échapper à</target>
       </trans-unit>
       <trans-unit id="b9f24e83531326204197015b2f43a93f" resname="Damage">
         <source>Damage</source>
-        <target>Damage</target>
+        <target>Dégât</target>
       </trans-unit>
       <trans-unit id="6dd1b5ddcf2d141fa924bb9207874c6d" resname="Horror">
         <source>Horror</source>
-        <target>Horror</target>
+        <target>Horreur</target>
       </trans-unit>
       <trans-unit id="63af23acea82542bd29f7e5d19361805" resname="Doom">
         <source>Doom</source>
-        <target>Doom</target>
+        <target>Fatalité</target>
       </trans-unit>
       <trans-unit id="60deea80d2e908af97e2c8c0da66949a" resname="Shroud">
         <source>Shroud</source>
-        <target>Shroud</target>
+        <target>Valeur Occulte</target>
       </trans-unit>
       <trans-unit id="140e5f509e8ff4ac1413a3170063af27" resname="Clues">
         <source>Clues</source>
-        <target>Clues</target>
+        <target>Indices</target>
       </trans-unit>
       <trans-unit id="9046fcdec95378ce88a0879ebfc44475" resname="Test Icons">
         <source>Test Icons</source>
@@ -119,7 +119,7 @@
       </trans-unit>
       <trans-unit id="d9ed9cfb2b4c0bc9bc7e2208ee80aec0" resname="Member since">
         <source>Member since</source>
-        <target>Member since</target>
+        <target>Membre depuis</target>
       </trans-unit>
       <trans-unit id="3b8dacebcabd4075dc1dbd89f13a0178" resname="published decklists">
         <source>published decklists</source>
@@ -159,19 +159,19 @@
       </trans-unit>
       <trans-unit id="ef54f55d1717398848fc37eb0e1b309f" resname="Share your decks.">
         <source>Share your decks.</source>
-        <target>Share your decks.</target>
+        <target>Partager vos decks.</target>
       </trans-unit>
       <trans-unit id="808fc528a81ffee00ce69ee6c57ce9d6" resname="Select a faction color for your username">
         <source>Select a faction color for your username</source>
-        <target>Select a faction color for your username</target>
+        <target>Sélectionnez une couleur de classe pour votre nom d'utilisateur</target>
       </trans-unit>
       <trans-unit id="c9cc8cce247e49bae79f15173ce97354" resname="Save">
         <source>Save</source>
-        <target>Save</target>
+        <target>Sauvegarder</target>
       </trans-unit>
       <trans-unit id="f6039d44b29456b20f8f373155ae4973" resname="Username">
         <source>Username</source>
-        <target>Username</target>
+        <target>Nom d'utilisateur</target>
       </trans-unit>
       <trans-unit id="ce8ae9da5b7cd6c3df2929543a9af92d" resname="Email">
         <source>Email</source>
